--- a/Proyecto Day/index.html
+++ b/Proyecto Day/index.html
@@ -93,7 +93,7 @@
 <body>
   <!-- Botón para reproducir canción -->
   <button id="playBtn" onclick="playSong()">🎶 Reproducir canción</button>
-  <audio id="song" src="10 Slide Away.mp3"></audio>
+  <audio id="song" src="Slide_Away.mp3"></audio>
 
   <div class="overlay">
     <h1>🎉 ¡Feliz Cumpleaños, Daichulin!🥳🎂</h1>
